# Attendance-Checkin

./: .dockerignore  .gitignore  AUTH_FIX_SUMMARY.md  POSTGRES_MIGRATION.md  README.md  RENDER.md  app.db  app.db.bak  docker-compose.yml  package-lock.json  package.json  qr_check_in_system_full_stack_scaffold_fast_api_react_vite_docker.jsx
backend/: .dockerignore  .gitignore  alembic.ini  pyproject.toml  requirements.txt  test.db-journal
backend/alembic/: env.py
backend/alembic/versions/: 1edbbcaea996_merge_migration_heads.py  4c10382c68a3_add_audit_logs_table.py  660ceb4aaf00_add_recurring_event_fields.py  7ed7827fa89e_enable_cascade_delete.py  b73bdd219570_initial_schema.py  c1a2b3c4d5e6_add_comment_to_audit_logs.py  e8e998577d55_diagnose_event_members.py
backend/app/: main.py
backend/app/api/: deps.py  router.py  webhooks.py
backend/app/core/: __init__.py  auth0.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attendance.py  audit_log.py  base.py  event.py  event_member.py  organization.py  user.py  user_role.py
backend/app/repositories/: attendance_repo.py  audit_log_repo.py  base.py  event_member_repo.py  event_repo.py  user_repo.py
backend/app/services/: auth_service.py  event_service.py
backend/app/utils/: timezone.py
backend/tests/: conftest.py  test_attendance.py  test_attendance_csv_export.py  test_auth.py  test_create_event.py  test_events.py  test_main_on_startup.py  test_my_checkins.py
backend/tests/routes/: test_attendance.py  test_auth.py  test_comment_requirements.py  test_event_family.py  (+5 more)
(+102 files in other folders)
